--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "NODE_ENV='test' jest",
+    "prepare": "husky install",
+    "sql-playground": "psql -f playground.sql > playground.text"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,9 @@
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "pg": "^8.7.3"
+    "express": "^4.18.2",
+    "pg": "^8.7.3",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "husky": "^8.0.2",
